--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,16 +7,16 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "prettier"
+    "prettier",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "parser": "@babel/eslint-parser",
+  "parser": "@typescript-eslint/parser",  
   "parserOptions": {
     "ecmaVersion": 2023,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     },
-    "requireConfigFile": false,
     "babelOptions": {
       "presets": ["@babel/preset-react"]
     }
@@ -29,7 +29,7 @@
   "globals": {
     "browser": "readonly"
   },
-  "plugins": ["react", "prettier", "react-hooks"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/prop-types": 0,
