--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
     "@eslint/js": "^9.6.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
