Add-typescript-to-project (#26)
* add typescript

* rewrite all project files to TypeScript

* bugfix and refresh app settings

* update node modules

* fix bugs and optimize

---------

Co-authored-by: NikV34 <25172610+NikV34@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,19 @@
     "browser": true,
     "es2023": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
-  "parser": "@babel/eslint-parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2023,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    },
-    "requireConfigFile": false,
-    "babelOptions": {
-      "presets": ["@babel/preset-react"]
     }
   },
   "settings": {
@@ -24,9 +26,12 @@
   "globals": {
     "browser": "readonly"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "react/prop-types": 0
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
