--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,17 @@
 {
   "env": {
     "browser": true,
-    "es2023": true
+    "es2023": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "prettier",
+    "plugin:jest/recommended",
+    "plugin:jest/style"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -26,7 +29,7 @@
   "globals": {
     "browser": "readonly"
   },
-  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks", "jest"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/prop-types": "off",
