--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@babel/eslint-parser": "^7.24.7",
     "@babel/plugin-transform-private-property-in-object": "^7.25.8",
     "@eslint/js": "^9.6.0",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
@@ -63,6 +63,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.9.5"
   }
 }
