adjust jest configuration and presets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2015", //Uses iteration over Set objects.
+    "target": "es6", //Uses iteration over Set objects.
     "lib": ["dom", "dom.iterable", "esnext"], // Includes DOM and ES features.
     "allowJs": true, // Allows mixing JavaScript files in the project.
     "skipLibCheck": true, // Skips type checking of declaration files.
@@ -13,7 +13,7 @@
     "resolveJsonModule": true, // Allows importing JSON files.
     "isolatedModules": true, // Ensures that each file is treated as a separate module.
     "noEmit": true, // Prevents TypeScript from generating any output files.
-    "jsx": "react-jsx" // Uses the new JSX transform (React 17+).
+    "jsx": "react" // Uses the new JSX transform (React 17+).
   },
   "include": ["src"], // Only include files from the 'src' directory.
   "exclude": ["node_modules"] // Exclude 'node_modules' from being compiled.
