--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
@@ -50,7 +47,9 @@
     "@babel/plugin-transform-private-property-in-object": "^7.25.8",
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.6.0",
-    "type": "module",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
@@ -67,6 +66,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "typescript": "^4.9.5"
